# image-tools

./: .gitignore  Dockerfile  LICENSE.txt  Makefile  README.md  docker-compose.yaml  nginx.conf  package-lock.json  package.json  tailwind.config.js
rust_core/: Cargo.toml
rust_core/src/: app_image.rs  image_info.rs  lib.rs
src/lib/: debounce.ts  rust-core.ts
src/routes/: +layout.svelte  +page.svelte  +page.ts
src/routes/resize/: +page.svelte
