[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.91"
js-sys = "0.3.68"
image = "0.25.0-preview.0"
base64 = "0.21.7"
console_log = "1.0.0"
log = "0.4.21"
regex = "1.10.3"
bytes = "1.5.0"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }